# destinations-recommender-graphql

./: .env  Cargo.toml
src/: algebra.rs  context.rs  main.rs  mutation.rs  query.rs  schema.rs
src/graphql/: infrastructure.rs  mod.rs
src/graphql/resolver/: mod.rs  photos.rs
