[package]
name = "destinations-recommender-graphql"
version = "0.1.0"
authors = ["Dmitry Grachikov <dmitry.grachikov@freshcells.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.14.2"
juniper_rocket = "0.5.2"
rocket = "0.4.2"
diesel = { version = "1.4.3", features = ["postgres"] }
dotenv = "0.15.0"
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
rand = "0.7.3"
